--- a/docs/modules/ROOT/pages/user-guide/reports/map.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/map.adoc
@@ -117,6 +117,7 @@ selector (footer of the visualization).
 |Auto-run query |on/off |on |when activated automatically runs the query
 when the report is displayed. When set to `off', the query is displayed
 and will need to be executed manually.
+|Report Description |markdown text | | When specified, adds another button the report header that opens a pop-up. This pop-up contains the rendered markdown from this setting. 
 |===
 
 == Rule-Based Styling
