--- a/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
@@ -57,3 +57,14 @@ ____
 Alternatively, environment variables from docker compose or a kubernetes
 deployment can be used.
 ____
+
+== Deep Linking
+To dynamically view a deployed NeoDash dashboard, you can deep-link into a deployed dashboard.
+ the following deeplinking options are available via URL parameters:
+- Appending `?page=1` to the URL will open up a dashboard at a given page. (Starting at zero).
+- Appending `?neodash_person_name=Tom` to the URL will set a dashboard parameter as a default for the entire dashboard.
+
+Multiple parameters can be used in a deep-link by concatinating them:
+....
+https://myneodashdeployment.com/?page=1&neodash_person_name=Tom&neodash_movie_name=The%20Matrix
+....
