--- a/docs/modules/ROOT/pages/user-guide/reports/raw-json.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/raw-json.adoc
@@ -23,4 +23,5 @@ image::json.png[Basic Value]
 |Auto-run query |on/off |on |when activated automatically runs the query
 when the report is displayed. When set to `off', the query is displayed
 and will need to be executed manually.
+|Report Description |markdown text | | When specified, adds another button the report header that opens a pop-up. This pop-up contains the rendered markdown from this setting. 
 |===
