--- a/docs/modules/ROOT/pages/user-guide/reports/single-value.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/single-value.adoc
@@ -46,6 +46,7 @@ image::value2.png[Styled Value]
 |Auto-run query |on/off |on |when activated automatically runs the query
 when the report is displayed. When set to `off', the query is displayed
 and will need to be executed manually.
+|Report Description |markdown text | | When specified, adds another button the report header that opens a pop-up. This pop-up contains the rendered markdown from this setting. 
 |===
 
 == Rule-Based Styling
