--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -112,8 +112,11 @@ pages:
 - link:sunburst[Sunburst]
 - link:circle-packing[Circle Packing] 
 - link:treemap[Treemap]
+- link:radar[Radar Chart] 
 - link:map[Map]
+- link:choropleth[Choropleth Chart] 
 - link:single-value[Single Value] 
+- link:sankey[Sankey Chart] 
 - link:raw-json[Raw JSON] 
 - link:parameter-select[Parameter Select] 
 - link:iframe[iFrame]
