--- a/docs/modules/ROOT/pages/user-guide/faq.adoc
+++ b/docs/modules/ROOT/pages/user-guide/faq.adoc
@@ -42,8 +42,7 @@ When you’re done building a dashboard and want to show to others as a
 read-only web page, you can set up a link:standalone%20mode[Standalone
 Mode] deployment of NeoDash.
 
-If you need help setting this up, please contact the
-mailto:niels.dejong@neo4j.com[team] and we can help out.
+If you need help setting this up, please contact the NeoDash team.
 
 == 4. Is NeoDash Production Ready?
 
@@ -57,8 +56,7 @@ used.
 access to the right people. As a rule of thumb, you should give NeoDash
 access to the people that can also see Bloom.
 
-For other questions regarding setting up your own production deployment,
-please mailto:niels.dejong@neo4j.com[contact us].
+For other questions regarding setting up your own production deployment, contact the NeoDash team.
 
 == 5. Can I use NeoDash with Neo4j Community Edition?
 
@@ -73,7 +71,7 @@ issue on https://github.com/neo4j-labs/neodash/issues[Github]. Issues
 will be addressed on a best-effort basis.
 
 If you’re looking for a specific feature with high priority, you can
-reach out to the mailto:niels.dejong@neo4j.com[Neo4j Team].
+reach out to the Neo4j team.
 
 == 7. How can I contribute to NeoDash myself?
 
@@ -88,4 +86,4 @@ dashboard, let us know!
 == 8. Can I get professional help with NeoDash?
 
 If you are interested in a services agreement to support your NeoDash deployment, please reach out to the
-mailto:niels.dejong@neo4j.com[Neo4j Services Team].
+https://neo4j.com/professional-services/[Neo4j Services Team].
