Added docs for Gauge chart

--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -117,6 +117,7 @@ pages:
 - link:choropleth[Choropleth Chart] 
 - link:single-value[Single Value] 
 - link:sankey[Sankey Chart] 
+- link:gauge[Gauge Chart]
 - link:raw-json[Raw JSON] 
 - link:parameter-select[Parameter Select] 
 - link:iframe[iFrame]
