--- a/docs/modules/ROOT/pages/user-guide/reports/choropleth.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/choropleth.adoc
@@ -1,5 +1,7 @@
 = Choropleth
 
+label:Advanced&nbsp;Visualization[]
+
 A Choropleth chart will render geographical data in geoJson polygons
 layout. It takes two fields: 
 
