--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -24,6 +24,10 @@
 *** xref:user-guide/reports/markdown.adoc[Markdown]
 ** xref:user-guide/publishing.adoc[Publishing]
 ** xref:user-guide/bloom-integration.adoc[Bloom Integration]
+** xref:user-guide/extensions/index.adoc[Extensions]
+*** xref:user-guide/extensions/advanced-visualizations.adoc[Advanced Visualizations]
+*** xref:user-guide/extensions/rule-based-styling.adoc[Rule-Based Styling]
+*** xref:user-guide/extensions/report-actions.adoc[Report Actions]
 ** xref:user-guide/faq.adoc[FAQ]
 * xref:developer-guide/index.adoc[Developer Guide]
 ** xref:developer-guide/build-and-run.adoc[Build & Run]
