--- a/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
@@ -1,5 +1,7 @@
 = Sunburst
 
+label:Advanced&nbsp;Visualization[]
+
 A sunburst chart will render hierarchical data in a multi-level pie
 visualization. It takes two fields: 
 
