Fixed docs. Added radar as advanced visualization

--- a/docs/modules/ROOT/pages/user-guide/extensions/report-actions.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/report-actions.adoc
@@ -1,6 +1,6 @@
 = Report Actions 
 
-label:Pro&nbsp;Extension[]
+link:../#_2_pro_extensions[label:Pro&nbsp;Extension[]]
 
 Report actions let dashboard builders add interactivity into dashboards. Actions can be used to achieve:
 
