--- a/docs/modules/ROOT/pages/user-guide/reports/circle-packing.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/circle-packing.adoc
@@ -1,6 +1,6 @@
 = Circle Packing
 
-label:Advanced&nbsp;Visualization[]
+link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
 
 A circle packing chart will render hierarchical data in a group of
 nested circles. It takes two fields: 
