--- a/docs/modules/ROOT/pages/user-guide/extensions/advanced-visualizations.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/advanced-visualizations.adoc
@@ -10,5 +10,6 @@ The following visualizations are part of this extension:
 - Three charts to plot hierarchical data (link:../../reports/sunburst[Sunburst], link:../../reports/circle-packing[Circle Packing], link:../../reports/treemap[Treemap])
 - A link:../../reports/gauge-chart[Gauge Chart] to show percentages 
 - A link:../../reports/choropleth[Choropleth Map] to visualize numeric, country-data.
+- A link:../../reports/radar[Radar Chart] to create a radial view of multiple categoric values.
 
 image::advanced-visualizations.png[Advanced Visualizations]
