--- a/docs/modules/ROOT/pages/user-guide/reports/choropleth.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/choropleth.adoc
@@ -1,6 +1,6 @@
 = Choropleth
 
-label:Advanced&nbsp;Visualization[]
+link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
 
 A Choropleth chart will render geographical data in geoJson polygons
 layout. It takes two fields: 
@@ -11,6 +11,9 @@ layout. It takes two fields:
 == Examples
 
 === Basic Choropleth
+
+
+
 
 [source,cypher]
 ----
