--- a/docs/modules/ROOT/pages/user-guide/reports/sankey.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/sankey.adoc
@@ -1,6 +1,6 @@
 = Sankey Chart
 
-label:Advanced&nbsp;Visualization[]
+link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
 
 A Sankey visualization will generate a flow diagram from nodes and links.
 Beware that cyclic dependencies are not supported.
