--- a/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
@@ -1,6 +1,6 @@
 = Sunburst
 
-label:Advanced&nbsp;Visualization[]
+link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
 
 A sunburst chart will render hierarchical data in a multi-level pie
 visualization. It takes two fields: 
