--- a/docs/modules/ROOT/pages/user-guide/reports/treemap.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/treemap.adoc
@@ -1,6 +1,6 @@
 = Treemap
 
-label:Advanced&nbsp;Visualization[]
+link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
 
 A treemap chart will render hierarchical data in a nested rectangle
 layout. It takes two fields: 
