--- a/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
@@ -47,7 +47,7 @@ docker run  -it --rm -p 5005:5005 \
     -e standaloneDatabase="neo4j" \
     -e standaloneDashboardName="My Dashboard" \
     -e standaloneDashboardDatabase="dashboards" \
-    nielsdejong/neodash
+    neo4jlabs/neodash
 ....
 
 Make sure that all of the environment variables are set to the correct
