--- a/docs/modules/ROOT/pages/quickstart.adoc
+++ b/docs/modules/ROOT/pages/quickstart.adoc
@@ -8,8 +8,8 @@ https://neodash.graphapp.io.
 App Gallery].
 . Using Docker:
 ```
-docker pull nielsdejong/neodash:latest      
-docker run -it --rm -p 5005:5005 nielsdejong/neodash
+docker pull neo4jlabs/neodash:latest      
+docker run -it --rm -p 5005:5005 neo4jlabs/neodash
 ```
 
 Or, build it yourself:
