--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -98,6 +98,8 @@ pages:
 - link:treemap[Treemap]
 - link:radar[Radar Chart] 
 - link:map[Map]
+- link:choropleth[Choropleth Chart] 
+- link:areamap[Area Map] 
 - link:single-value[Single Value] 
 - link:sankey[Sankey Chart] 
 - link:gauge[Gauge Chart]
