--- a/docs/modules/ROOT/pages/user-guide/reports/graph.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/graph.adoc
@@ -99,6 +99,10 @@ the main (force-directed) layout to one of the two experimental layouts
 (tree/radial). For the experimental layouts, make sure your graph is a
 DAG (directed acyclic graph).
 
+|Enable graph exploration |on/off |on |Enables basic exploration functionality for the graph. Exploration can be done by right clicking on a node, and choosing 'Expand' to choose a type to traverse. Data is retrieved real-time and not cached in the visualization.
+
+|Enable graph editing |on/off |off |Enables editing of nodes and relationships in the graph from the right-click context menu. In addition, lets users create new relationships with existing types/property keys as present in the database.
+
 |Show pop-up on Hover |on/off |on |if enabled, shows a pop-up when a
 user hovers over one of the nodes/relationships in the visualization.
 The pop-up contains the label and properties of the node/relationship.
