added images for docs and changed example for areaMap

--- a/docs/modules/ROOT/pages/user-guide/reports/areamap.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/areamap.adoc
@@ -10,9 +10,7 @@ It takes two fields:
 
 == Examples
 
-=== Basic Choropleth
-
-
+=== Basic Area Map
 
 
 [source,cypher]
@@ -30,8 +28,8 @@ CALL {
 WITH code, sum(value) as totalCount
 RETURN code,totalCount
 ----
-// TODO: change image
-image::choropleth.png[Choropleth Chart]
+image::areamap-countries.png[Country Level Visualization]
+image::areamap-regions.png[Example of Drill Down inside a Country]
 
 == Advanced Settings
 
