--- a/docs/modules/ROOT/pages/user-guide/reports/graph.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/graph.adoc
@@ -91,6 +91,9 @@ directly maps to the width value.
 relationships with animated particles on them, moving in the direction
 of the relationship.
 
+|Length of the directional arrow |Number |3 |Use this to set the length of the directional arrow.
+If 0, no arrow will be drawn.
+
 |Background Color |Text |#fafafa |The background color of the
 visualization.
 
